--- a/index.html
+++ b/index.html
@@ -2,40 +2,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Alan Kawa - Developer</title>
-    <link rel="stylesheet" href="styles.css"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alan Kawa Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="logo">Alan Kawa</div>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
 
-    <section class="hero">
-        <div class="hero-text">
-            <h1>Hello, I'm <span>Alan Kawa</span></h1>
-            <p>A passionate developer building digital experiences from Kurdistan</p>
-        </div>
-        <div class="hero-img">
-            <img src="image.png" alt="Alan Coding"/>
-        </div>
-    </section>
+  <!-- Navigation -->
+  <nav>
+    <a href="#about" class="btn">About Me</a>
+    <a href="#project" class="btn">Projects</a>
+    <a href="#contact" class="btn">Contact</a>
+  </nav>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I’m a creative and self-driven developer specializing in web development and bot creation. 
-           With a passion for innovation and community building, I’ve spent years helping others through unique and scalable software solutions.
-        </p>
-    </section>
+  <!-- About Me Section -->
+  <section id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I am Alan Kawa, a passionate web developer and designer. I enjoy creating visually appealing and highly functional websites that provide great user experiences.</p>
+    </div>
+  </section>
 
-    <footer>
-        <p>Made By : Alan Kawa</p>
-    </footer>
+  <!-- Projects Section -->
+  <section id="project">
+    <div class="container">
+      <h2>Projects</h2>
+      <p>Comming Soon.</p>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>This is a Temporary Website.</p>
+    </div>
+  </section>
+
 </body>
 </html>
